extensions/istio-service-mesh/intelligent-req-routing/istio-resources/claims-api-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: claims-api-vs
spec:
  hosts:
  - "*"
  gateways:
  - claims-api-gateway
  http:
  - match:
    - uri:
        prefix: /api/v1/claims
    route:
    - destination:
        host: claims-api
        port:
          number: 9080
  - route:
    - destination:
        host: claims-api
        port:
          number: 9080
        subset: v3
